@@ -38,6 +38,7 @@ https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828
 - Support for `transaction.span_count.dropped.total` {pull}448[448].
 - Optional field `transaction.sampled` {pull}441[441]
 - Add Kibana sourcefilter for `sourcemap.sourcemap` {pull}454[454]
+- Increase default 'ConcurrentRequests' from 20 to 40{pull}492[492]
 
 ==== Deprecated
 
